# flask_dash_app

./: .gitignore  config.py  dash_examples.txt  epics.md  etf_list.csv  pyproject.toml  readme.md  requirements.txt  wsgi.py
data/etf/uk/: agbp.csv  eqqq.csv  ibtm.csv  ibts.csv  ieem.csv  inxg.csv  isjp.csv  isp6.csv  itpg.csv  iwdp.csv  lqds.csv  sgln.csv  shyu.csv  slxx.csv  ssln.csv  vapx.csv  vemt.csv  vety.csv  veur.csv  veve.csv  vfem.csv  vgov.csv  vjpn.csv  vusa.csv  vusc.csv
data/forex/: gbp_usd.csv
devdashapp/: __init__.py  routes.py
devdashapp/plotlydash/: dashboard1.py
devdashapp/templates/: index.jinja2  layout.jinja2
tests/: test_devdashapp.py
