[tool.poetry]
name = "devdashapp"
version = "0.1.0"
description = "sample flask + dash python application"
authors = ["Emilio D'Souza <emiliod90@gmail.com>"]
readme= "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
dash = "^1.19.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
